== Unreleased

- fix: NullPointerException during shutdown with executable war files

== 2.1.0

Requires JRuby >= 9.4 due to needing Ruby 3.0+ compatibility.

- #439: Include gem_build_complete_path in jar for RubyGems 2.5+ extension support
- #440: Don't overwrite user-specified `webserver.properties` file
- #513, #521: Fix issues with openstruct used for `config.webxml` values on JRuby 9.3+
- #527: Fix war file path as argument for Jetty runner on Jetty 9.4.32+
- #538: Put public folders inside public for executable war
- #552, #553: Use URI.open instead of open
- #557: Replace File.exists? with File.exist? for Ruby 3.2.0+ compatibility
- #559, 575: Fixes to update Warbler to modern libs and JRuby, removing old Bundler 1.x hacks
- #562: Fix problems with spaces in path names under windows
- #571: Use newer keyword argument rubyzip 3.0 API (drops support for JRuby 9.3)
- #575: Fix Gem path issues on JRuby 9.4.x
- #574: Bump default Jetty version for executables to 9.4.58.v20250814

== 2.0.5

- #427: Check Java properties when looking up RAILS_ENV
- #424: Rails Webpacker support
- #397: Avoid warnings under JRuby 9K

== 2.0.4

- fix: an instance variable name typo (@servlet_context_listeners)
- #383: add bundler monkey patch

== 2.0.3

- Remove test_files from gemspec to save 700k

== 2.0.2

- #380: exclude spec/integration/rakelib and dot-files being packed into .gem
- #379: 2.0.1 regression due forcing GEM_PATH = GEM_HOME

== 2.0.1

- #367: avoid duplicate .jar copies in WEB-INF/lib
- #364: support for compiling .rb files using jrubyc with options
- #362: limit rubyzip version to not match too far
- #363: [backport] support for running with (recent) rubyzip 1.2.0

== 2.0.0

- Initial release with 9k support

== 1.4.9

- Fixed a bug in detecting default PORT for executable WAR
- #332: Warbler not picking up new Bundler convention of 'exe' directory for executables

- Added the ability to set custom port for Jetty launcher with
  warbler.port or PORT env var
