@@ -6,5 +6,5 @@
 #++
 
 module Warbler
-  VERSION = "2.1.0"
+  VERSION = "2.1.1"
 end
