@@ -1,6 +1,7 @@
 == Unreleased
 
 - fix: NullPointerException during shutdown with executable war files
+- fix: Jetty wars don't have console logging enabled by default
 
 == 2.1.0
 
